// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manifest Detail Side Panel renders successfully with data when data is passed across 1`] = `
<div>
  <div
    class="pf-c-drawer__panel"
    hidden=""
  >
    <div
      class="pf-c-drawer__body"
    >
      <div
        class="pf-c-drawer__head"
      >
        <div
          class="manifest-details-content"
        >
          <h3
            tabindex="0"
          >
            John Doe
          </h3>
          <h4>
            Details
          </h4>
          <div
            class="pf-l-grid"
          >
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <p>
                <strong>
                  Name
                </strong>
              </p>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <p>
                John Doe
              </p>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <p>
                <strong>
                  Type
                </strong>
              </p>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <p>
                Satellite 
                6.9
              </p>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <p>
                <strong>
                  UUID
                </strong>
              </p>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <p>
                abc123
              </p>
            </div>
          </div>
          <h4>
            Subscriptions
          </h4>
          <div
            class="pf-l-grid"
          >
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <p>
                <strong>
                  Simple content access
                  <svg
                    aria-hidden="true"
                    class="sca-more-info-icon"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </strong>
              </p>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <p>
                Enabled
              </p>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <p>
                <strong>
                  Subscriptions
                </strong>
              </p>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-link manifest-details-open-entitlements-button"
                data-ouia-component-id="OUIA-Generated-Button-link-3"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                10
              </button>
            </div>
          </div>
          <h4>
            History
          </h4>
          <div
            class="pf-l-grid"
          >
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <p>
                <strong>
                  Created
                </strong>
              </p>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <p>
                January 1, 2020
              </p>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <p>
                <strong>
                  Created by
                </strong>
              </p>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <p>
                Jane Doe
              </p>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <p>
                <strong>
                  Last modified date
                </strong>
              </p>
            </div>
            <div
              class="pf-l-grid__item pf-m-6-col"
            >
              <p>
                January 1, 2021
              </p>
            </div>
          </div>
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-tertiary"
            data-ouia-component-id="OUIA-Generated-Button-tertiary-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Export manifest
          </button>
          <p
            class="manifest-details-delete-text"
          >
            Deleting a subscription allocation is 
            <strong>
              STRONGLY
            </strong>
             discouraged. This action should only be taken in extreme circumstances or for debugging purposes
          </p>
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-tertiary"
            data-ouia-component-id="OUIA-Generated-Button-tertiary-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Delete manifest
          </button>
        </div>
        <div
          class="pf-c-drawer__actions"
        >
          <div
            class="pf-c-drawer__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close drawer panel"
              class="pf-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-4"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Manifest Detail Side Panel renders with a spinner when loading 1`] = `
<div>
  <div
    class="pf-c-drawer__panel"
    hidden=""
  >
    <div
      class="pf-c-drawer__body"
    >
      <div
        class="pf-c-drawer__head"
      >
        <div
          aria-label="Loading Manifest Details"
          class="manifest-detail-drawer-loading"
          tabindex="-1"
        >
          <div
            class="pf-l-bullseye"
          >
            <span
              aria-valuetext="Loading..."
              class="pf-c-spinner pf-m-xl"
              role="progressbar"
            >
              <span
                class="pf-c-spinner__clipper"
              />
              <span
                class="pf-c-spinner__lead-ball"
              />
              <span
                class="pf-c-spinner__tail-ball"
              />
            </span>
          </div>
        </div>
        <div
          class="pf-c-drawer__actions"
        >
          <div
            class="pf-c-drawer__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close drawer panel"
              class="pf-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Manifest Detail Side Panel renders with an error message when an error occurs 1`] = `
<div>
  <div
    class="pf-c-drawer__panel"
    hidden=""
  >
    <div
      class="pf-c-drawer__body"
    >
      <div
        class="pf-c-drawer__head"
      >
        <div
          class="pf-c-empty-state pf-m-sm"
        >
          <div
            class="pf-c-empty-state__content"
          >
            <svg
              aria-hidden="true"
              class="pf-c-empty-state__icon"
              fill="var(--pf-global--danger-color--100)"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              />
            </svg>
            <h3
              class="pf-c-title pf-m-lg"
            >
              Something went wrong
            </h3>
            <div
              class="pf-c-empty-state__body"
            >
              <h4>
                Try refreshing the page. If the problem persists, contact your organization administrator or visit our
                 
                <a
                  aria-disabled="false"
                  class="pf-c-button pf-m-link pf-m-inline"
                  data-ouia-component-id="OUIA-Generated-Button-link-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  href="https://status.redhat.com/"
                  target="_blank"
                >
                  status page
                </a>
                 
                for known outages.
              </h4>
            </div>
          </div>
        </div>
        <div
          class="pf-c-drawer__actions"
        >
          <div
            class="pf-c-drawer__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close drawer panel"
              class="pf-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-2"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Manifest Detail Side Panel renders with an error message when the API response does not have 200 status and no data is returned 1`] = `
<div>
  <div
    class="pf-c-drawer__panel"
    hidden=""
  >
    <div
      class="pf-c-drawer__body"
    >
      <div
        class="pf-c-drawer__head"
      >
        <div
          class="pf-c-empty-state pf-m-sm"
        >
          <div
            class="pf-c-empty-state__content"
          >
            <svg
              aria-hidden="true"
              class="pf-c-empty-state__icon"
              fill="var(--pf-global--danger-color--100)"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              />
            </svg>
            <h3
              class="pf-c-title pf-m-lg"
            >
              Something went wrong
            </h3>
            <div
              class="pf-c-empty-state__body"
            >
              <h4>
                Try refreshing the page. If the problem persists, contact your organization administrator or visit our
                 
                <a
                  aria-disabled="false"
                  class="pf-c-button pf-m-link pf-m-inline"
                  data-ouia-component-id="OUIA-Generated-Button-link-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  href="https://status.redhat.com/"
                  target="_blank"
                >
                  status page
                </a>
                 
                for known outages.
              </h4>
            </div>
          </div>
        </div>
        <div
          class="pf-c-drawer__actions"
        >
          <div
            class="pf-c-drawer__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close drawer panel"
              class="pf-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-3"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
